[gd_scene load_steps=4 format=3 uid="uid://b1dale6j23rs1"]

[ext_resource type="Theme" uid="uid://pt1hrfiuwfpg" path="res://theme_base/theme.tres" id="1_njb33"]
[ext_resource type="Script" uid="uid://cuyq1rty57qdj" path="res://src/ui_components/visual_calendar/visual_day/visual_day.gd" id="2_ub0fh"]
[ext_resource type="Script" uid="uid://cnyyowwlb04kl" path="res://src/ui_components/base/defaults/default_button.gd" id="3_8v23p"]

[node name="VisualDay" type="MarginContainer" groups=["visual-day"]]
custom_minimum_size = Vector2(90, 90)
anchors_preset = -1
anchor_right = 0.047
anchor_bottom = 0.083
offset_right = -0.240005
offset_bottom = 0.359993
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_njb33")
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("2_ub0fh")

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
auto_translate_mode = 2
layout_mode = 2
alignment = 0
text_overrun_behavior = 3
clip_text = true
script = ExtResource("3_8v23p")

[node name="MarginContainer" type="MarginContainer" parent="Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Button/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Button/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Market" type="Label" parent="Button/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text_overrun_behavior = 3

[node name="MonthDay" type="Label" parent="Button/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 2
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
text = "31"
horizontal_alignment = 2
text_overrun_behavior = 1

[node name="Competition" type="VBoxContainer" parent="Button/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0
alignment = 1

[node name="TeamName" type="Label" parent="Button/MarginContainer/VBoxContainer/Competition"]
unique_name_in_owner = true
auto_translate_mode = 2
layout_mode = 2
size_flags_vertical = 6
text = "ROMA"
text_overrun_behavior = 3

[node name="CompetitionName" type="Label" parent="Button/MarginContainer/VBoxContainer/Competition"]
unique_name_in_owner = true
auto_translate_mode = 2
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "SERIE A"
text_overrun_behavior = 3

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
